--- a/index.html
+++ b/index.html
@@ -1,44 +1,169 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" />
-  <title>いぶ鯖</title>
+  <meta charset="UTF-8">
+  <title>いぶ鯖 | Discord Server</title>
 
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
+  <!-- Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Noto+Sans+JP:wght@400;600&display=swap" rel="stylesheet">
 
   <style>
     body {
       margin: 0;
-      width: 100vw;
-      height: 100vh;
-      background: radial-gradient(circle at top, #111 0%, #000 70%);
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      font-family: 'Noto Sans JP', sans-serif;
+      background: linear-gradient(180deg, #050505, #0a0f1f);
+      color: #eaf3ff;
+      line-height: 1.9;
+    }
+
+    .container {
+      max-width: 900px;
+      margin: auto;
+      padding: 60px 20px;
     }
 
     h1 {
       font-family: 'Orbitron', sans-serif;
-      font-size: 80px;
-      letter-spacing: 0.2em;
-      color: transparent;
-      background: linear-gradient(90deg, #00ffff, #0077ff, #00ffff);
-      background-size: 200% auto;
-      background-clip: text;
-      -webkit-background-clip: text;
-      animation: glow 3s linear infinite;
+      font-size: 48px;
+      text-align: center;
+      color: #00cfff;
       text-shadow: 0 0 20px rgba(0, 200, 255, 0.6);
     }
 
-    @keyframes glow {
-      to {
-        background-position: 200% center;
-      }
+    h2 {
+      margin-top: 50px;
+      color: #6ad6ff;
+      border-left: 5px solid #00cfff;
+      padding-left: 12px;
+    }
+
+    p {
+      margin-top: 10px;
+    }
+
+    .box {
+      background: rgba(255,255,255,0.05);
+      border: 1px solid rgba(0,200,255,0.25);
+      border-radius: 12px;
+      padding: 20px;
+      margin-top: 15px;
+      box-shadow: 0 0 20px rgba(0, 150, 255, 0.15);
+    }
+
+    ul {
+      margin: 0;
+      padding-left: 20px;
+    }
+
+    .tags {
+      margin-top: 30px;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 12px;
+    }
+
+    .tag {
+      background: rgba(0, 200, 255, 0.15);
+      border: 1px solid #00cfff;
+      border-radius: 10px;
+      padding: 10px;
+      text-align: center;
+      font-weight: 600;
+    }
+
+    .invite {
+      margin-top: 60px;
+      text-align: center;
+    }
+
+    .invite a {
+      display: inline-block;
+      padding: 16px 40px;
+      font-size: 18px;
+      font-weight: bold;
+      text-decoration: none;
+      color: #000;
+      background: linear-gradient(90deg, #00cfff, #4da6ff);
+      border-radius: 40px;
+      box-shadow: 0 0 25px rgba(0, 200, 255, 0.7);
+      transition: transform 0.2s, box-shadow 0.2s;
+    }
+
+    .invite a:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 40px rgba(0, 200, 255, 1);
+    }
+
+    .note {
+      margin-top: 20px;
+      font-size: 14px;
+      opacity: 0.7;
+      text-align: center;
     }
   </style>
 </head>
 <body>
-  <h1>いぶ鯖</h1>
+
+  <div class="container">
+
+    <h1>1月28日創設！いぶ鯖！</h1>
+
+    <div class="box">
+      <p><strong>discordを始めて数ヶ月。</strong><br>
+      僕はいろんな失敗をしてきました。</p>
+
+      <p><strong>失敗を学び、<u>どこに出しても恥ずかしくない鯖</u>を作ります。</strong></p>
+    </div>
+
+    <h2>主にしているゲーム</h2>
+    <div class="box">
+      <ul>
+        <li>マイクラ（レルムズあり）</li>
+        <li>フォートナイト</li>
+        <li>原神（ガチ勢多い）</li>
+        <li>ブロックブラスト</li>
+      </ul>
+    </div>
+
+    <h2>こんな人に来てほしい！</h2>
+    <div class="box">
+      <ul>
+        <li>優しい方</li>
+        <li>Botが作れる方</li>
+        <li>たくさん話してくれる方</li>
+        <li>ゲームをしている方</li>
+        <li>常識がある方</li>
+      </ul>
+    </div>
+
+    <div class="tags">
+      <div class="tag">📢 入ってすぐ宣伝可能</div>
+      <div class="tag">🛡️ 荒らし対策万全</div>
+      <div class="tag">👥 100人以上の鯖運営経験あり</div>
+      <div class="tag">☮️ 平和主義サーバー</div>
+      <div class="tag">💬 VC・雑談 活発</div>
+    </div>
+
+    <div class="box">
+      <p>
+        半年に1度、ゲームの大会を開催。<br>
+        <strong>優勝賞品はアマギフ…！？</strong>
+      </p>
+    </div>
+
+    <div class="invite">
+      <a href="https://discord.gg/Yx7r6radS" target="_blank">
+        いぶ鯖に参加する
+      </a>
+    </div>
+
+    <div class="note">
+      ※ まだ人集めの段階です<br>
+      最高の鯖にしたいと思っています。ぜひご参加ください！
+    </div>
+
+  </div>
+
 </body>
 </html>
+
